Fixed text cutoff/Fixed Screenshot Preview button/Fixed screenshot path regex
- Added vertical padding to notification text elements. This fixes an issue where text with "hanging" letters could be cut off when increasing the font-size of individual elements via the "Use Custom Font Sizes" option
- Added -1.5px to `margin-block` for all `#achcontent > span` to visually compensate for new `padding-block` values
- Fixed an issue where the Screenshot/Notification Image Preview Button did not trigger when clicked
- Fixed an issue where the Notification Image window did not scale with the Customiser > Preset > Scale value
- Changed screenshot path regex to act as a whitelist instead of a blacklist. This fixes an issue where invalid non-alphanumeric characters that were not explicitly specified would prevent screenshots from being written for games using these invalid characters
- Added `try/catch` block to `screenshot.clearsswin()` function to prevent a `Object has been destroyed` error
- Removed unused destructured variable from `sswin.ts`

--- a/notify/base.css
+++ b/notify/base.css
@@ -337,23 +337,27 @@ body[nodecoration] .wrapper#achcontent > span {
     line-height: calc(1.2rem * var(--fontsize));
     word-break: break-word;
     -webkit-box-align: center;
-    margin-block: calc((var(--textvspace) * 1px) * var(--scale));
+    margin-block: calc(((var(--textvspace) * 1px) - 1.5px) * var(--scale));
     /* padding-inline: calc(var(--scale) * 2px); */
 }
 
+/* `padding-block` ensures text does not get cut off when custom per-element font-sizes are used */
 #achcontent > #unlockmsg {
     font-size: calc(1rem * var(--unlockmsgfontsize));
     color: var(--unlockmsgfontcolor);
+    padding-block: calc(0.2rem * var(--unlockmsgfontsize));
 }
 
 #achcontent > #title {
     font-size: calc(1rem * var(--titlefontsize));
     color: var(--titlefontcolor);
+    padding-block: calc(0.2rem * var(--titlefontsize));
 }
 
 #achcontent > #desc {
     font-size: calc(1rem * var(--descfontsize));
     color: var(--descfontcolor);
+    padding-block: calc(0.2rem * var(--descfontsize));
 }
 
 #hiddenicon {
